re PR middle-end/43300 (ICE: in emit_move_insn, at expr.c:3432)

PR middle-end/43300
	* tree-outof-ssa.c (emit_partition_copy): New argument sizeexp,
	use it to expand block copies.
	(insert_partition_copy_on_edge, insert_rtx_to_part_on_edge,
	insert_part_to_rtx_on_edge): Adjust callers of emit_partition_copy.
	(insert_value_copy_on_edge): Use store_expr for BLKmode values.

testsuite/
	* gcc.dg/pr43300.c: New testcase.

From-SVN: r157461